[tool.poetry]
name = "pdeplayground"
version = "0.1.0"
description = "Playground for solving PDEs with jax"
authors = ["Stefan.sko <Stefan.sko@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jax = "^0.4.28"
jaxlib = "^0.4.28"
jaxtyping = "^0.2.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
